--- a/config/locales/fra/parameters.yml
+++ b/config/locales/fra/parameters.yml
@@ -33,8 +33,8 @@ fra:
     management:
       embankments:
         days_before_warning_undone: 'Nombre de jours avant de prévenir pour les encaissements non effectués'
-        days_before_warning_unvalidated: 'Nombre de jours nécessaire pour pour pouvoir valider une remise de chèque'
-        numeration: 'Numérotation des remises de chèques'
+        days_before_warning_unvalidated: 'Nombre de jours nécessaire pour pour pouvoir valider une remise en banque'
+        numeration: 'Numérotation des remises en banque'
       invoices:
         numeration: 'Numérotation des factures'
       payments:
