--- a/config/locales/jpn/parameters.yml
+++ b/config/locales/jpn/parameters.yml
@@ -39,8 +39,8 @@ jpn:
     management:
       embankments:
         #>days_before_warning_undone: 'Nombre de jours avant de prévenir pour les encaissements non effectués'
-        #>days_before_warning_unvalidated: 'Nombre de jours nécessaire pour pour pouvoir valider une remise de chèque'
-        #>numeration: 'Numérotation des remises de chèques'
+        #>days_before_warning_unvalidated: 'Nombre de jours nécessaire pour pour pouvoir valider une remise en banque'
+        #>numeration: 'Numérotation des remises en banque'
       impressions:
       invoices:
         #>numeration: 'Numérotation des factures'
