--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -895,7 +895,7 @@ fra:
       # Personne
       entity:
         active: 'Actif'
-        activity_code: 'Code d''activité'
+        activity_code: 'Code APE/NAF'
         attorney: 'Mandataire'
         attorney_account: 'Compte mandataire associé'
         attorney_account_id: 'Compte mandataire associé'
