--- a/config/locales/fra/prints/purchase_order.xml
+++ b/config/locales/fra/prints/purchase_order.xml
@@ -9,17 +9,20 @@
   <document unit="mm" size="10" title="supplier.label">
     <page orientation="portrait" format="A4" margin="10mm">
 
-      <part height="70mm">
-	<set>
-	  <text value="{{purchase_order/supplier_address}}"/>
-	  <text value="{{purchase_order/client_address}}" align="left" font="helvetica" top="40mm" left="100mm"/>
-	</set>
+      <part height="72mm">
+        <set>
+          <image value="{{purchase_order.company.entity/photo}}" height="30mm">
+            <text value="{{purchase_order.company.entity/full_name}}" size="16"/>
+	    <text value="{{purchase_order/client_address}}" top="5mm"/>
+          </image>
+          <text value="{{purchase_order/supplieraddress}}" align="left" font="helvetica" top="42mm" left="100mm"/>
+        </set>
       </part>
 
 
       <part height="15mm">
 	<set>
-	  <text value="Commande N°{{purchase_order/number}}" bold="true" left="50%" align="center" top="7mm" size="12"/>
+	  <text value="Bon de commande N°{{purchase_order/number}}" bold="true" left="50%" align="center" top="7mm" size="12"/>
 	  <text value="À {{purchase_order.company.default_contact.area/city_name?capitalize=true}}, le {{purchase_order/created_on?format=month_letter}}" left="100%" align="right"/>
 	</set>      
       </part>
