--- a/config/locales/fra/pack.accountancy.yml
+++ b/config/locales/fra/pack.accountancy.yml
@@ -190,6 +190,7 @@ fra:
       journal_record:
         entries: 'Écritures'
         journal_record_update: 'Modifier la pièce'
+        resource: 'Consulter la pièce d''origine : {{resource}} {{number}}'
         title: 'Pièce comptable N°{{number}} du {{created_on}}'
       journal_record_create:
         title: 'Ajouter une pièce'
