Set t3e calls wherever is needed
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1551 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -592,7 +592,7 @@ eng:
         updater_id: 'Updater'
       entity:
         #>active: 'Actif'
-        #>activity_code: 'Code d''activité'
+        #>activity_code: 'Code APE/NAF'
         #>attorney: 'Mandataire'
         #>attorney_account: 'Compte mandataire associé'
         #>attorney_account_id: 'Compte mandataire associé'
