--- a/config/locales/jpn/activerecord.yml
+++ b/config/locales/jpn/activerecord.yml
@@ -589,7 +589,7 @@ jpn:
         updater_id: '修正の人'
       entity:
         #>active: 'Actif'
-        #>activity_code: 'Code d''activité'
+        #>activity_code: 'Code APE/NAF'
         #>attorney: 'Mandataire'
         #>attorney_account: 'Compte mandataire associé'
         #>attorney_account_id: 'Compte mandataire associé'
