--- a/config/locales/eng/pack.management.yml
+++ b/config/locales/eng/pack.management.yml
@@ -114,9 +114,9 @@ eng:
         #>title: 'Modification du mode de livraison : {{name}}'
       delivery_modes:
         #>title: 'Modes de livraison'
-      _delivery_update:
       delivery_update:
         #>title: 'Modification de la livraison'
+      _delivery_update:
       embankment:
         #>amount: 'Montant total'
         #>embankment: 'Remise en banque du'
@@ -197,7 +197,7 @@ eng:
         #>price_amount_with_taxes: 'Prix TTC'
         #>product: 'Produit'
         #>quantity_to_credit: 'Qté. à passer en avoir'
-        #>title: 'Passage en avoir de la facture {{value}}'
+        #>title: 'Passage en avoir de la facture {{number}}'
         #>total_quantity: 'Qté. totale'
         #>unit: 'Unité'
         #>validate: 'Valider'
@@ -221,7 +221,7 @@ eng:
         #>locations: 'Voir la liste des lieux de stockage'
         #>moves: 'Mouvements de stocks'
         #>stock_move_create: 'Ajouter un mouvement de stock'
-        #>title: 'Détail du lieu de stockage : {{value}}'
+        #>title: 'Détail du lieu de stockage : {{name}}'
       _location_choice:
         #>select_location: 'Choississez un lieu de stockage'
       location_create:
@@ -280,9 +280,9 @@ eng:
         #>sale_price_create: 'Créer un prix de vente'
         #>sales_price_create: 'Ajouter un prix de vente'
         #>stocks: 'État des stocks'
-        #>title: 'Fiche du produit : {{value}}'
+        #>title: 'Produit : {{name}}'
       product_component_create:
-        #>title: 'Ajouter un composant au produit {{value}} '
+        #>title: 'Ajouter un composant au produit {{product}} '
       product_component_update:
         #>title: 'Modification d''un composant du produit {{product}} '
       _product_components:
@@ -338,7 +338,7 @@ eng:
         #>purchase_order_print: 'Imprimer la commande d''achat'
         #>purchase_order_update: 'Modifier les informations de la commande'
         #>purchase_orders: 'Consulter la liste des achats'
-        #>title: 'Produits de la commande {{value}} chez {{name}}'
+        #>title: 'Produits de l''achat {{number}} au fournisseur {{supplier}}'
         #>validate: 'Valider la commande'
       purchase_order_summary:
         #>payments: 'Décaissements'
@@ -391,7 +391,7 @@ eng:
         #>sale_order_print: 'Imprimer la vente'
         #>sale_payment_part_create: 'Ajouter un encaissement'
         #>subscriptions: 'Abonnements'
-        #>title: 'Détails de la vente {{value}} au client {{name}}'
+        #>title: 'Détails de la vente {{number}} au client {{client}}'
       sale_order_create:
         #>title: 'Nouvelle vente'
       sale_order_deliveries:
@@ -574,8 +574,7 @@ eng:
       shelf:
         #>products: 'Produits de la catégorie'
         #>shelf_update: 'Modifier la catégorie'
-        #>shelves: 'Voir la liste des catégories de produit'
-        #>title: 'Détail de la catégorie : {{value}}'
+        #>title: 'Détail de la catégorie : {{name}}'
       shelf_create:
         #>title: 'Ajout d''une nouvelle catégorie de produits'
       _shelf_form:
@@ -668,16 +667,16 @@ eng:
         #>title: 'Lot {{name}}'
       transport:
         #>deliveries: 'Livraisons'
-        #>title: 'Transport du {{value}}'
+        #>title: 'Transport du {{created_on}}'
       transport_create:
         #>title: 'Ajout d''un nouveau transport'
+      transport_deliveries:
+        #>title: 'Livraisons du transport'
       _transport_deliveries:
         #>add: 'Ajouter la livraison au transport'
         #>add_delivery: 'Ajouter une livraison'
         #>back: 'Valider et revenir à la liste des transports'
         #>delivery: 'Livraison'
-      transport_deliveries:
-        #>title: 'Livraisons du transport'
       _transport_form:
         #>info: 'Renseignez les informations du transport'
       transport_update:
