--- a/config/locales/eng/parameters.yml
+++ b/config/locales/eng/parameters.yml
@@ -3,6 +3,7 @@ eng:
     accountancy:
       accountize:
         #>automatic: 'Activer la bascule automatique des données comptables'
+        #>detail_payments_in_embankments: 'Détailler la liste des règlements lors de la comptabilisation d''une remise en banque'
         #>draft_mode: 'Enregistrer les pièces dans le brouillard lors de la bascule automatique'
       accounts:
         #>capital_gains: 'Résultat de l''exercice (bénéfice)'
