--- a/config/locales/jpn/activerecord.yml
+++ b/config/locales/jpn/activerecord.yml
@@ -574,7 +574,7 @@ jpn:
         #>embanker: 'Encaisseur'
         #>embanker_id: 'Encaisseur'
         id: '唯一の番号'
-        #>journal_record: 'Pièces comptables'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>journal_records: 'Pièces comptables'
         lock_version: '修正の番号'
@@ -1531,7 +1531,7 @@ jpn:
         #>expense: 'Dépense'
         #>expense_id: 'Dépense'
         #>id: 'ID'
-        #>journal_record: 'Pièces comptables'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>payment: 'Décaissement'
@@ -1603,6 +1603,7 @@ jpn:
         #>payment_delay: 'Délai d''encaissement'
         #>payment_delay_id: 'Délai d''encaissement'
         #>payment_parts: 'Parties d''encaissement'
+        #>payments: '(((PAYMENTS)))'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
         #>state: 'État'
@@ -1704,7 +1705,7 @@ jpn:
         #>embankment: 'Remise en banque'
         #>embankment_id: 'Remise en banque'
         id: '唯一の番号'
-        #>journal_record: 'Pièces comptables'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         lock_version: '修正の番号'
         #>mode: 'Mode d''encaissement'
@@ -1764,7 +1765,7 @@ jpn:
         #>expense_id: 'Dépense'
         #>expense_type: 'Type de dépense'
         id: '唯一の番号'
-        #>journal_record: 'Pièces comptables'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         lock_version: '修正の番号'
         #>payment: 'Encaissement'
