--- a/config/locales/spa/activerecord.yml
+++ b/config/locales/spa/activerecord.yml
@@ -572,7 +572,7 @@ spa:
         #>embanker: 'Encaisseur'
         #>embanker_id: 'Encaisseur'
         #>id: 'ID'
-        #>journal_record: 'Pièces comptables'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>journal_records: 'Pièces comptables'
         #>lock_version: 'Version'
@@ -1529,7 +1529,7 @@ spa:
         #>expense: 'Dépense'
         #>expense_id: 'Dépense'
         #>id: 'ID'
-        #>journal_record: 'Pièces comptables'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>payment: 'Décaissement'
@@ -1601,6 +1601,7 @@ spa:
         #>payment_delay: 'Délai d''encaissement'
         #>payment_delay_id: 'Délai d''encaissement'
         #>payment_parts: 'Parties d''encaissement'
+        #>payments: '(((PAYMENTS)))'
         #>responsible: 'Responsable'
         #>responsible_id: 'Responsable'
         #>state: 'État'
@@ -1702,7 +1703,7 @@ spa:
         #>embankment: 'Remise en banque'
         #>embankment_id: 'Remise en banque'
         #>id: 'ID'
-        #>journal_record: 'Pièces comptables'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>mode: 'Mode d''encaissement'
@@ -1762,7 +1763,7 @@ spa:
         #>expense_id: 'Dépense'
         #>expense_type: 'Type de dépense'
         #>id: 'ID'
-        #>journal_record: 'Pièces comptables'
+        #>journal_record: 'Pièce comptable'
         #>journal_record_id: 'Pièce comptable'
         #>lock_version: 'Version'
         #>payment: 'Encaissement'
