Enhance bank_statement_point by cleaning numbers in sum calculation
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1554 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/activerecord.yml
+++ b/config/locales/eng/activerecord.yml
@@ -122,6 +122,7 @@ eng:
         #>journal: 'Journal utilisé'
         #>journal_id: 'Journal utilisé'
         #>key: 'Clé RIB'
+        #>last_bank_statement: '(((LAST_BANK_STATEMENT)))'
         lock_version: 'Version'
         #>mode: 'Mode'
         name: 'Name'
