--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -395,6 +395,7 @@ fra:
         journal: 'Journal utilisé'
         journal_id: 'Journal utilisé'
         key: 'Clé RIB'
+        last_bank_statement: (((LAST_BANK_STATEMENT)))
         lock_version: 'Version'
         mode: 'Mode'
         name: 'Nom'
