Fixes translation bugs and to_accoutancy bug on deletion
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1556 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fra/activerecord.yml
+++ b/config/locales/fra/activerecord.yml
@@ -1699,14 +1699,14 @@ fra:
         prices: 'Prix'
         published: 'Publié'
         purchase_order_lines: 'Lignes d''achat'
-        purchases_account: 'Compte comptable de produits'
-        purchases_account_id: 'Compte comptable de produits'
+        purchases_account: 'Compte comptable de charges'
+        purchases_account_id: 'Compte comptable de charges'
         quantity_max: 'Quantité maximum'
         quantity_min: 'Quantité minimum'
         reduction_submissive: 'Soumis à réduction'
         sale_order_lines: 'Lignes de vente'
-        sales_account: 'Compte comptable de charges'
-        sales_account_id: 'Compte comptable de charges'
+        sales_account: 'Compte comptable de produits'
+        sales_account_id: 'Compte comptable de produits'
         service_coeff: 'Coefficient (de quantité) de service'
         shelf: 'Catégorie'
         shelf_id: 'Catégorie'
