--- a/config/locales/fra/help/management-prices.txt
+++ b/config/locales/fra/help/management-prices.txt
@@ -9,10 +9,10 @@ Vous avez la possibilité de rechercher uniquement les prix de vente ou les prix
 
 ===== Import Export CSV =====
 
-L'import et l'export de tarifs vous permettent de gérer vos grilles de tarifs au format CSV et donc depuis des logiciels tels qu'Excel,...
+L'import et l'export de tarifs vous permettent de gérer vos grilles de tarifs au format CSV et donc depuis des tableurs.
 
-  * [[management-prices_import|Exporter]]** vos tarifs au format csv va générer un fichier csv récapitulant tous vos tarifs (HT, taxe, catégorie, ...).
-  * [[management-prices_import|Importer]]** un fichier csv de tarifs vous permet de refléter sous Ekylibre les changements et ajouts faits à vos tarifs depuis votre fichier csv.
+  * [[management-prices_import|Exporter]] vos tarifs au format csv va générer un fichier csv récapitulant tous vos tarifs (HT, taxe, catégorie, ...).
+  * [[management-prices_import|Importer]] un fichier csv de tarifs vous permet de refléter sous Ekylibre les changements et ajouts faits à vos tarifs depuis votre fichier csv.
 
 
 [[management-index|Retour à l'aide sur la Gestion Commerciale]]
