--- a/config/locales/fra/pack.accountancy.yml
+++ b/config/locales/fra/pack.accountancy.yml
@@ -50,20 +50,16 @@ fra:
         account_create: 'Enregistrer un nouveau compte'
         title: 'Plan de comptes'
         used_accounts: 'Comptes utilisés seulement'
-      # Unfound view ./app/views/accountancy/_accounts_find
-      _accounts_find:
-        account_create: 'Créer un nouveau compte comptable'
-        account_name: 'Nom du compte '
-        account_number: 'Numéro de compte '
-        no_accounts: 'Il n''existe pas de compte commençant par ce numéro.'
       balance:
         account_name: 'Compte comptable'
         account_number: 'N°Compte'
         accounts: 'Comptes comptables utilisés'
         balance: 'Solde'
+        centralize: 'Comptes comptables centralisateurs'
+        centralized_account: 'Compte centralisateur {{name}}'
         closed: 'Verrouillées' #!
         confirmed: 'Confirmées' #!
-        down_to_level: 'Détailler jusqu''au niveau'
+        down_to_level: 'Détailler jusqu''au niveau' #!
         draft: 'Brouillard' #!
         journal_entries_states: 'États des écritures utilisées'
         subtotal: 'Sous-total {{name}}'
@@ -109,12 +105,6 @@ fra:
       cashes:
         title: 'Trésoreries'
         #>cash_create: # Potentially missing translation
-      # Unfound view ./app/views/accountancy/_currencies_find
-      _currencies_find:
-        currency_code: 'Code de devise'
-        currency_id: 'Numéro de devise'
-        currency_name: 'Nom de devise'
-        currency_rate: 'Taux de devise'
       _document_options:
         period: 'Période'
       # No defined action for this view !!!
@@ -134,29 +124,6 @@ fra:
       draft_entries:
         title: 'Brouillard'
         validate_selected_entries: 'Valider les écritures sélectionnées'
-      # No defined action for this view !!!
-      # Unfound view ./app/views/accountancy/entries
-      entries:
-        account_number: 'N°Compte'
-        all_financialyears: '--- Tous les exercices ---'
-        all_journals: '--- Tous les journaux ---'
-        entry_validate: 'OK'
-        journal_x: '{{name}} (clôturé le {{closed_on}})'
-        label: 'Libellé'
-        number_records: 'Nombre des dernières pièces à afficher'
-        record_created: 'Créée le'
-        record_credit: 'Crédit'
-        record_debit: 'Débit'
-        record_number: 'N°Pièce'
-        record_printed: 'Datée du'
-        select_financialyear: 'Exercice comptable'
-        select_journal: 'Journal'
-        subtitle: 'Enregistrement dans le journal "{{journal}}" pour l''exercice "{{financialyear}}"'
-        title: 'Consultation et saisie des écritures'
-      # No defined action for this view !!!
-      # Unfound view ./app/views/accountancy/entry_update
-      entry_update:
-        title: 'Modification de l''écriture'
       financialyear:
         general_informations: 'Informations générales'
         title: 'Exercice comptable {{code}}'
@@ -174,6 +141,13 @@ fra:
       financialyears:
         financialyear_create: 'Ouvrir un nouvel exercice comptable'
         title: 'Exercices comptables'
+      general_ledger:
+        accounts: 'Comptes comptables utilisés'
+        closed: 'Verrouillées' #!
+        confirmed: 'Confirmées' #!
+        draft: 'Brouillard' #!
+        journal_entries_states: 'États des écritures utilisées'
+        title: 'Grand livre'
       index:
         journals: 'Journaux'
         nb_entries: 
@@ -221,10 +195,6 @@ fra:
       journals:
         title: 'Journaux'
         #>journal_create: # Potentially missing translation
-      # Unfound view ./app/views/accountancy/_journals_find
-      _journals_find:
-        journal_id: 'Numéro de journal'
-        journal_name: 'Nom du journal'
       _journals_search:
         filter_entries_with: 'Filtrer les écritures avec' #!
         interval: 'Intervalle personnalisé'
@@ -238,36 +208,6 @@ fra:
         select_financialyear: 'Exercice' #!
         title: 'Lettrage de comptes'
       _print_balance:
-        dates: 'Saisissez les dates de début et de fin de la période'
-        from: 'Période du'
-        to: 'Au'
-      # Unfound view ./app/views/accountancy/_print_balance_sheet
-      _print_balance_sheet:
-        balance_sheet: 'Sélectionnez l''exercice'
-        select_financialyear: 'Exercice'
-      # No defined action for this view !!!
-      # Unfound view ./app/views/accountancy/print_balance_sheet
-      print_balance_sheet:
-        period: 'Période'
-        title: 'Impression du bilan'
-      # No defined action for this view !!!
-      # Unfound view ./app/views/accountancy/print_by_financial_year
-      print_by_financial_year:
-        financial_id: 'Exercice comptable'
-        financial_year_select: 'Sélectionnez l'' exercice comptable'
-      # Unfound view ./app/views/accountancy/_print_journal
-      _print_journal:
-        dates: 'Saisissez les dates ainsi que le journal'
-        from: 'Période du'
-        journal: 'Journal'
-        to: 'Au'
-      # Unfound view ./app/views/accountancy/_print_journals
-      _print_journals:
-        dates: 'Saisissez les dates'
-        from: 'Période du'
-        to: 'Au'
-      # Unfound view ./app/views/accountancy/_print_ledger
-      _print_ledger:
         dates: 'Saisissez les dates de début et de fin de la période'
         from: 'Période du'
         to: 'Au'
