Fixes some evolutions and bugs in company registration
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1563 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/eng/pack.management.yml
+++ b/config/locales/eng/pack.management.yml
@@ -75,14 +75,14 @@ eng:
         #>amount: 'Montants HT'
         #>amount_with_taxes: 'Montants TTC'
         #>csv_statistics: 'Statistiques à exporter au format CSV'
-        #>data_to_export: 'Données à exporter :'
+        #>data_to_export: 'Données à exporter'
         #>invoice: 'Factures'
         #>nb_years: 'Nb d''années dans l''historique'
         #>product: 'Produit'
         #>quantity: 'Quantités'
         #>sale_order: 'Commandes'
         #>sales: 'Exporter un tableau des ventes au format CSV'
-        #>source: 'Source de données :'
+        #>source: 'Source de données'
       delay:
         #>delay_update: 'Modifier le délai'
         #>title: 'Délai : {{name}}'
@@ -586,9 +586,17 @@ eng:
         #>shelf_create: 'Ajouter une nouvelle catégorie de produits'
         #>title: 'Catégories de produits'
       statistics:
+        #>amount: 'Montants HT'
+        #>amount_with_taxes: 'Montants TTC'
         #>csv_statistics: 'Statistiques à exporter au format CSV'
+        #>data_to_export: 'Données à exporter'
         #>go: 'Valider'
         #>graph_statistics: 'Statistiques graphiques'
+        #>invoice: 'Factures'
+        #>nb_years: 'Nb d''années dans l''historique'
+        #>quantity: 'Quantités'
+        #>sale_order: 'Commandes'
+        #>source: 'Source de données'
         #>title: 'Statistiques'
       _stock_indicator:
         #>critic_stock_min: 'Stock minimum critique'
