--- a/config/locales/eng/general.yml
+++ b/config/locales/eng/general.yml
@@ -159,7 +159,9 @@ eng:
         #>admin: 'Administrateur'
         #>bank_journal_nature_name: 'Banque'
         cash:
-          #>name: 'Caisse'
+          name:
+            #>bank_account: 'Compte bancaire'
+            #>cash_box: 'Caisse'
         #>category: 'Par défaut'
         delays:
           expression:
@@ -230,6 +232,13 @@ eng:
         #>location: 'Réserve'
         #>paid_tax: 'TVA déductible'
         #>price_list_name: 'Tarif normal'
+        purchase_payment_modes:
+          cash:
+            #>name: 'Espèces'
+          check:
+            #>name: 'Chèque'
+          transfer:
+            #>name: 'Virement'
         role:
           name:
             #>admin: 'Gérant'
@@ -240,6 +249,8 @@ eng:
             #>name: 'Espèces'
           check:
             #>name: 'Chèque'
+          transfer:
+            #>name: 'Virement sur compte bancaire'
         #>sample_product_name: 'Produit Exemple'
         sequences:
           management:
