--- a/config/locales/fra/pack.management.yml
+++ b/config/locales/fra/pack.management.yml
@@ -70,14 +70,14 @@ fra:
         amount: 'Montants HT' #!
         amount_with_taxes: 'Montants TTC' #!
         csv_statistics: 'Statistiques à exporter au format CSV' #!
-        data_to_export: 'Données à exporter :'
+        data_to_export: 'Données à exporter'
         invoice: 'Factures' #!
         nb_years: 'Nb d''années dans l''historique'
         product: 'Produit' #!
         quantity: 'Quantités' #!
         sale_order: 'Commandes' #!
         sales: 'Exporter un tableau des ventes au format CSV' #!
-        source: 'Source de données :'
+        source: 'Source de données'
       delay:
         delay_update: 'Modifier le délai'
         title: 'Délai : {{name}}'
@@ -577,9 +577,17 @@ fra:
         shelf_create: 'Ajouter une nouvelle catégorie de produits'
         title: 'Catégories de produits'
       statistics:
-        csv_statistics: 'Statistiques à exporter au format CSV'
+        amount: 'Montants HT' #!
+        amount_with_taxes: 'Montants TTC' #!
+        csv_statistics: 'Statistiques à exporter au format CSV' #!
+        data_to_export: 'Données à exporter'
         go: 'Valider' #!
-        graph_statistics: 'Statistiques graphiques'
+        graph_statistics: 'Statistiques graphiques' #!
+        invoice: 'Factures' #!
+        nb_years: 'Nb d''années dans l''historique'
+        quantity: 'Quantités' #!
+        sale_order: 'Commandes' #!
+        source: 'Source de données'
         title: 'Statistiques'
       # Unfound view ./app/views/management/_stock_indicator
       _stock_indicator:
